--- a/.env
+++ b/.env
@@ -24,7 +24,12 @@ APP_SECRET=adb9ca4ef47a4a3497338dbbe09e9c9a
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/TutoProjetSymf
+DB_USER=root
+DB_PASSWORD=
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=TutoProjetSymf
+DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
