--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ APP_SECRET=adb9ca4ef47a4a3497338dbbe09e9c9a
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DB_USER=root
-DB_PASSWORD=
-DB_HOST=localhost
+DB_USER=u8v7ax8wk6yls1qd
+DB_PASSWORD=mGXON4u9kChVYW3KUx44
+DB_HOST=bagwztxvonblxfec5yyi-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_NAME=TutoProjetSymf
+DB_NAME=bagwztxvonblxfec5yyi
 DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 ###< doctrine/doctrine-bundle ###
 
