--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     encoders:
-        App\Entity\User: bcrypt
+        App\Entity\User: { algorithm: bcrypt, cost: 12 }
     providers:
         user_db:
             entity: { class: App\Entity\User, property: username }
@@ -12,6 +12,11 @@ security:
         main:
             provider: user_db
             anonymous: ~
+
+            logout:
+                path:   /logout
+                target: /
+
             form_login:
                 login_path: login
                 check_path: login
