--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
         "symfony/web-server-bundle": "4.3.*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*",
         "vich/uploader-bundle": "^1.11"
     },
