--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "ext-json": "^1.7",
+        "ext-json": "*",
         "cocur/slugify": "^3.2",
         "fzaninotto/faker": "^1.9",
         "knplabs/knp-paginator-bundle": "^4.1",
