env pour passage en ligne

--- a/.env
+++ b/.env
@@ -31,13 +31,13 @@ APP_SECRET=adb9ca4ef47a4a3497338dbbe09e9c9a
 # DB_NAME=bcuuxqybpahxgi3y0lo3
 # DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-MYSQL_ADDON_DB=bcuuxqybpahxgi3y0lo3
-MYSQL_ADDON_HOST=bcuuxqybpahxgi3y0lo3-mysql.services.clever-cloud.com
-MYSQL_ADDON_PASSWORD=CcnSeV5E1bRzBIcvqmQ8
-MYSQL_ADDON_PORT=3306
-MYSQL_ADDON_URI=mysql://${MYSQL_ADDON_USER}:${MYSQL_ADDON_PASSWORD}@${MYSQL_ADDON_HOST}:${MYSQL_ADDON_PORT}/${MYSQL_ADDON_DB}
-MYSQL_ADDON_USER=uoiuphdel80b4zzg
-MYSQL_ADDON_VERSION=8.0
+MYSQL_ADDON_DB=$MYSQL_ADDON_DB
+MYSQL_ADDON_HOST=$MYSQL_ADDON_HOST
+MYSQL_ADDON_PASSWORD=$MYSQL_ADDON_PASSWORD
+MYSQL_ADDON_PORT=$MYSQL_ADDON_PORT
+MYSQL_ADDON_URI=$MYSQL_ADDON_URI
+MYSQL_ADDON_USER=$MYSQL_ADDON_USER
+MYSQL_ADDON_VERSION=$MYSQL_ADDON_VERSION
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
