--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "knplabs/knp-paginator-bundle": "^4.1",
         "liip/imagine-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^5.4",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/debug-pack": "^1.0",
