--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "jquery": "^3.4.1"
+        "jquery": "^3.4.1",
+        "pg": "^7.14.0"
     }
 }
