--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "start": "node index.js",
+        "heroku-prebuild": "webpack",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
