--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "start": "node index.js",
+        "build": "ng build",
+        "heroku-postbuild": "ng build --prod",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
