--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "dependencies": {
         "jquery": "^3.4.1",
         "pg": "^7.14.0"
+    },
+    "engines": {
+        "node": "12.13.1",
+        "npm": "6.12.1"
     }
 }
