--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "engines": {
         "node": "12.13.1",
-        "npm": "6.12.1"
+        "npm": "6.12.1",
+        "yarn": "1.19.1"
     }
 }
