--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "postinstall": "encore production --progress"
+        "build": "encore production --progress"
     },
     "dependencies": {
         "jquery": "^3.4.1",
