--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "start": "node index.js",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "heroku-postbuild": "encore production --progress"
     },
     "dependencies": {
         "jquery": "^3.4.1",
