--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "private": true,
     "scripts": {
         "start": "node src/index.js",
-        "build": "webpack",
+        "heroku-postbuild": "webpack",
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch"
