--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -8,6 +8,15 @@ liip_imagine:
             web_path:
                 web_root: "%kernel.project_dir%/public"
                 cache_prefix: media/cache
+    loaders:
+        default:
+            filesystem:
+                data_root: "%kernel.project_dir%/public/images/properties"
+                bundle_resources:
+                    enabled: true
+
+    data_loader: default
+    cache: default
 
     filter_sets:
         thumb:
