add imagine in routing.yaml

--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -1,4 +1,10 @@
+_imagine:
+    resource: .
+    type:     imagine
+
 framework:
     router:
         strict_requirements: null
         utf8: true
+
+
