push d'une commande en plus pour trouver les images

--- a/config/routes/liip_imagine.yaml
+++ b/config/routes/liip_imagine.yaml
@@ -1,2 +1,6 @@
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.yaml"
+    loaders:
+        default:
+            filesystem:
+                data_root: "/"
