--- a/config/routes/liip_imagine.yaml
+++ b/config/routes/liip_imagine.yaml
@@ -1,6 +1,2 @@
 _liip_imagine:
-
-    loaders:
-        default:
-            filesystem:
-                data_root: /public/images
+    resource: "@LiipImagineBundle/Resources/config/routing.yaml"
