--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -1,13 +1,13 @@
 # See dos how to configure the bundle: https://symfony.com/doc/current/bundles/LiipImagineBundle/basic-usage.html
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
-    driver: "gd"
+    #driver: "gd"
 
-    resolvers:
-        default:
-            web_path:
-                web_root: "%kernel.project_dir%/public"
-                cache_prefix: media/cache
+    #resolvers:
+     #   default:
+     #       web_path:
+      #          web_root: "%kernel.project_dir%/public"
+      #          cache_prefix: media/cache
     loaders:
         default:
             filesystem:
@@ -17,10 +17,6 @@ liip_imagine:
 
     data_loader: default
     cache: default
-
-    controller:
-        filter_action:         liip_imagine.controller:filterAction
-        filter_runtime_action: liip_imagine.controller:filterRuntimeAction
 
     filter_sets:
         thumb:
