--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -1,13 +1,13 @@
 # See dos how to configure the bundle: https://symfony.com/doc/current/bundles/LiipImagineBundle/basic-usage.html
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
-    #driver: "gd"
+    driver: "gd"
 
-    #resolvers:
-     #   default:
-     #       web_path:
-      #          web_root: "%kernel.project_dir%/public"
-      #          cache_prefix: media/cache
+    resolvers:
+        default:
+            web_path:
+                web_root: "%kernel.project_dir%/public"
+                cache_prefix: media/cache
     loaders:
         default:
             filesystem:
