--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -3,4 +3,8 @@ framework:
         strict_requirements: null
         utf8: true
 
+    _imagine:
+        resource: .
+        type:     imagine
+
 
