--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -2,23 +2,23 @@
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
     driver: "gd"
+#    resolvers:
+#        default:
+#            web_path:
+#                web_root: "%kernel.project_dir%/public"
+#                cache_prefix: media/cache
+#    loaders:
+#        default:
+#            filesystem:
+#                data_root: "%kernel.project_dir%/public/images/properties"
+#                bundle_resources:
+#                    enabled: true
 
-    resolvers:
-        default:
-            web_path:
-                web_root: "%kernel.project_dir%/public"
-                cache_prefix: media/cache
-    loaders:
-        default:
-            filesystem:
-                data_root: "%kernel.project_dir%/public/images/properties"
-                bundle_resources:
-                    enabled: true
+#     data_loader: default
 
-    data_loader: default
-    cache: default
 
     filter_sets:
+        cache: ~
         thumb:
             quality: 75
             filters:
